...
          android:layout_height="wrap_content"
          android:layout_marginEnd="20dp"
          android:text="@{viewModel.topicToolbarTitleLiveData}" />
      </androidx.appcompat.widget.Toolbar>

      <com.google.android.material.tabs.TabLayout
        android:id="@+id/topic_tabs_container"
        style="@style/AppTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/topic_fragment_tab_layout_margin_start"
        android:layout_marginEnd="@dimen/topic_fragment_tab_layout_margin_end"
        android:textSize="14sp"
...
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/topic_app_bar_layout">

      <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/topic_tabs_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

      <View
        android:id="@+id/topic_shadow_view"
        android:layout_width="match_parent"
...
