<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.topic.practice.TopicPracticeViewModel" />
  </data>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/topic_practice_skill_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_shared_screen_quaternary_background_color"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:paddingStart="@dimen/topic_practice_fragment_padding_start"
    android:paddingEnd="@dimen/topic_practice_fragment_padding_end"
    android:paddingBottom="@dimen/topic_practice_fragment_padding_bottom"
    android:scrollbars="none"
    app:data="@{viewModel.topicPracticeSkillLiveData}"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</layout>
