<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="isSubmitButtonActive"
      type="Boolean" />

    <variable
      name="viewModel"
      type="org.oppia.android.app.topic.practice.practiceitemviewmodel.TopicPracticeFooterViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
      android:id="@+id/topic_practice_start_button"
      style="@style/StateButtonInactive"
      android:layout_width="wrap_content"
      android:minWidth="160dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/topic_practice_footer_view_margin_top"
      android:layout_marginBottom="@dimen/topic_practice_footer_view_margin_bottom"
      android:background="@{isSubmitButtonActive ? @drawable/state_button_primary_background :@drawable/state_button_inactive_background}"
      android:clickable="@{isSubmitButtonActive}"
      android:enabled="@{isSubmitButtonActive}"
      android:fontFamily="sans-serif-medium"
      android:minHeight="@dimen/clickable_item_min_height"
      android:text="@string/topic_fragment_practice_start_button"
      android:textColor="@{isSubmitButtonActive ? @color/component_color_shared_submit_text_active_color : @color/component_color_shared_submit_text_inactive_color}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
